<resources>
    <string name="app_name" translatable="false">Dangerous Traveler</string>

    <string name="settings">Settings</string>
    <string name="settings_files_category">Calibration file</string>
    <string name="settings_file_name_title">Calibration file name</string>
    <string name="use_custom_file_path_title">Use custom file path ?</string>
    <string name="switch_default_file_path_key" translatable="false">switch_default_file_path</string>
    <string name="settings_custom_file_path_title">Custom file path</string>
    <string name="settings_time_preferences">Time</string>
    <string name="settings_travelling_time_title">Travelling time</string>
    <string name="settings_calibration_title">Calibration of the vehicle</string>
    <string name="settings_calibration_switch_title">Calibrate the vehicle ?</string>
    <string name="settings_control_mode_category">Control mode</string>
    <string name="settings_control_joystick_title">Activate joystick control mode ?</string>
    <string name="change_theme_action">Change the theme</string>

    <!-- Titres des préférences -->
    <string name="general_header">General</string>
    <string name="camera_header">Camera</string>
    <string name="settings_video_scale_title">Video scale</string>
    <string name="settings_udp_adress_title">UDP streaming address</string>
    <string name="settings_url_to_send_title">URL to send</string>
    <string name="error_msg_no_internet_connection">No internet connection, please retry later</string>
    <string name="settings_streaming_bitrate_title">streaming bitrate</string>
    <string name="settings_streaming_resolution_title">sreaming resolution</string>
    <string name="quit_preview_screen_btn">Quit preview screen</string>
    <string name="settings_streaming_category">streaming</string>
    <string name="settings_video_recording_category">Video recording</string>
    <string name="settings_video_resolution_title">Video resolution</string>
    <string name="settings_video_frame_rate_title">Video frame rate</string>

</resources>
